--- a/teams.html
+++ b/teams.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Franchises — NBA</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;800&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+  <l<link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header class="site-header small">
