Fix typo in link to franchises page

--- a/history.html
+++ b/history.html
@@ -16,7 +16,7 @@
         <ul class="main-nav">
           <li><a href="index.html">Accueil</a></li>
           <li><a href="history.html">Histoire</a></li>
-          <li><a href="équipes.html">Franchises</a></li>
+          <li><a href="equipes.html">Franchises</a></li>
           <li><a href="players.html">Joueurs</a></li>
           <li><a href="gallery.html">Galerie</a></li>
           <li><a href="contact.html">Contact</a></li>
