--- a/teams.html
+++ b/teams.html
@@ -13,12 +13,16 @@
       <h1 class="logo">NBA<span class="logo-dot">.</span></h1>
       <nav>
         <ul class="main-nav">
-          <li><a href="index.html">Accueil</a></li>
-          <li><a href="history.html">Histoire</a></li>
-          <<li><a href="equipes.html">Franchises</a></li>
-          <li><a href="players.html">Joueurs</a></li>
-          <li><a href="gallery.html">Galerie</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <nav>
+  <ul class="main-nav">
+    <li><a href="index.html">Accueil</a></li>
+    <li><a href="histoire.html">Histoire</a></li>
+    <li><a href="equipes.html">Franchises</a></li>
+    <li><a href="joueurs.html">Joueurs</a></li>
+    <li><a href="galerie.html">Galerie</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
         </ul>
       </nav>
     </div>
